--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.11"
+  },
+  "scripts": {
+    "start": "nodemon ./src/index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
