Sistema de Login, Registro e Autenticação criados

--- a/.env-example
+++ b/.env-example
@@ -1,5 +1,8 @@
 APP_NAME=TrucoKingss
 
 # Banco de dados
-DB_NAME= ##DB_NAME
-DB_PASS= ##PASSWORD
+DB_NAME=YourDB_NAME
+DB_PASS=YourPASSWORD
+
+# Token
+SECRET_KEY=YourSecretKey
